--- a/invoice_managment/invoice/templates/invoice/client_list.html
+++ b/invoice_managment/invoice/templates/invoice/client_list.html
@@ -29,3 +29,6 @@
 
 <a href="{% url 'client-create' %}">Create New Client</a>
 <a href="{% url 'session-create' %}">Create New Session</a>
+
+{% include "invoice/nav.html" %}
+{% load static %}
