--- a/invoice_managment/invoice/templates/invoice/session.html
+++ b/invoice_managment/invoice/templates/invoice/session.html
@@ -6,3 +6,10 @@
 <p>Session Length: {{ session.session_length }}</p>
 <p>Rate per Session: {{ session.rate_per_session }}</p>
 <p>Total Amount: {{ session.amount }}</p>
+
+
+<p>Description: {{ session.description }}</p>
+<p>Status: {{ session.status }}</p>
+
+{% include "invoice/nav.html" %}
+{% load static %}
