new application set up

--- a/invoice_managment/invoice/templates/invoice/class.html
+++ b/invoice_managment/invoice/templates/invoice/class.html
@@ -6,6 +6,8 @@
 <p><strong>Length:</strong> {{ class.length }}</p>
 <p><strong>Rate per Class:</strong> {{ class.rate_per_class }}</p>
 <p><strong>Created By:</strong> {{ class.user.username }}</p>
+
+<a href="{% url 'class-update' class.id %}">Edit Class</a>
 <a href="{% url 'classes' %}">Back to Class List</a>
 {% include "invoice/nav.html" %}
 {% load static %}
