--- a/invoice_managment/invoice/templates/invoice/client_list.html
+++ b/invoice_managment/invoice/templates/invoice/client_list.html
@@ -17,6 +17,8 @@
         <td>
             <!-- Actions can be added here -->
             <a href="{% url 'client' client.id %}">View Details</a>
+            <a href="{% url 'client-update' client.id %}">Edit</a>
+            <a href="">Delete</a>
         </td>
     </tr>
 
