--- a/invoice_managment/invoice/templates/invoice/class_form.html
+++ b/invoice_managment/invoice/templates/invoice/class_form.html
@@ -2,5 +2,5 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">Submit</button>
 </form>
