--- a/invoice_managment/invoice/templates/invoice/client_form.html
+++ b/invoice_managment/invoice/templates/invoice/client_form.html
@@ -4,5 +4,5 @@
     {% csrf_token %}
    {{ form.as_p }}
      
-    <input type="submit" value="Create Client"> 
+    <input type="submit" value="Submit"> 
 </form>
