--- a/circus_booking_app/booking_app/base/templates/base/login.html
+++ b/circus_booking_app/booking_app/base/templates/base/login.html
@@ -10,7 +10,8 @@
         {{form.as_p}}
         <input class="button" type="submit" value="Login">
     </form>
-    <p>Don't have an account? <a href="{% url 'register-trainer' %}">Register as Trainer</a> 
+    <p>Don't have an account? <a href="{% url 'register-trainer' %}">Register as Trainer</a></p>
+    <p>Don't have an account? <a href="{% url 'register-client' %}">Register as Client</a></p>
 </div>
 
 
