complete invoice generation functionality

--- a/circus_booking_app/booking_app/base/templates/base/trainer_dashboard.html
+++ b/circus_booking_app/booking_app/base/templates/base/trainer_dashboard.html
@@ -28,8 +28,8 @@
 
 
 <p>Manage your invoices effectively</p>
-<a href="">View Invoices</a>
-<a href="">Create New Invoice</a>
+<a href="{% url 'invoice_list' %}">View Invoices</a>
+<a href="{% url 'invoice_create' %}">Create New Invoice</a>
 
 
   <h2>Your Sessions</h2>
